# TestSWIG

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TestSWIG.sln  appveyor.yml  build.sh
CSharp/: SimplifiedAPI.i
CSharp/CSharpLibrary/: A.cs  B.cs  CSharpLibrary.csproj  CSharpWrapper.cs  CSharpWrapperPINVOKE.cs  Library.cs  LibraryPINVOKE.cs  SWIGTYPE_p_std__shared_ptrT_A_t.cs
CSharp/CSharpLibrary/Properties/: AssemblyInfo.cs
CSharp/CSharpWrapper/: CSharpWrapper.vcxproj  CSharpWrapper.vcxproj.filters  SimpleAPIWrapper.cxx  SimpleAPIWrapper.h
CSharp/Tests/: Tests.cs  Tests.csproj
CSharp/Tests/Objects/: CSharpA.cs  CSharpAwithDestructor.cs  CSharpB.cs
CSharp/Tests/Properties/: AssemblyInfo.cs
CSharp/Tests/Tests/: BasicTests.cs  MemoryTests.cs
